--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mssql": "^7.2.1",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.7",
-    "tedious": "^13.0.4",
-    "body-parser": "^1.19.0"
+    "tedious": "^13.0.4"
   }
 }
